2007-06-21  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripControlHost.cs: If our hosted control never got created,
	don't try to dispose it.  [Fixes bug #81909]

2007-06-21  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutPanel.cs: Implement ScaleCore, ScaleControl.

2007-06-21  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutPanel.cs: Implement CellBorderStyle.  [Fixes bug #81884]

2007-06-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ThemeWin32Classic.cs: In OwnerDraw mode draw subitems only for 
	Details view.
	* DrawListViewColumnHeaderEventArgs.cs:
	* DrawListViewSubItemEventArgs.cs: Add padding to the bounds when drawing text
	using the DrawText () methods.

2007-06-19  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripProfessionalRenderer.cs: Put back clearing a ToolStripDropDown's
	background which got erased in my changes yesterday.

2007-06-19  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItem.cs: Actually set bounds for subitems in Details view
	(2.0 feature).
	* ThemeWin32Classic.cs: Refactor the drawing code for subitems, so we
	can invoke from the owner draw routines if we need it. Also, add
	support for Owner draw in Details view.

2007-06-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripDropDownMenu.cs, ToolStripItem.cs, ToolStripLabel.cs,
	ToolStripMenuItem.cs, ToolStripProfessionalRenderer.cs: Respect the
	ShowImageMargin setting, properly align text in a ToolStripLabel
	hosted on a ToolStripDropDown.

2007-06-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs, ToolStripContentPanel.cs, ToolStripDropDownMenu.cs,
	ToolStripProfessionalRenderer.cs: Refactor and clean up some rendering code.

2007-06-18  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DrawListViewSubItemEventArgs.cs: Actually implement its methods.

2007-06-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripLabel.cs: If the label is on a dropdown, adjust the text
	location to match ToolStripMenuItems.
