@@ -1,3 +1,7 @@
+2007-06-22  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* ListView.cs: Implement 2.0 HotTracking property.
+
 2007-06-21  Jonathan Pobst  <monkey@jpobst.com>
 
 	* ToolStripControlHost.cs: If our hosted control never got created,
